--- a/index.html
+++ b/index.html
@@ -1,182 +1,148 @@
-<!DOCTYPE html>  
-<html lang="zh-CN">  
-<head>  
-<meta charset="UTF-8" />  
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />  
-<title>KOReader 遥控</title>  
-  
-<style>  
-:root {  
-    --bg: #f2f3f1;  
-    --card: #ffffff;  
-    --primary: #8fa3a6;  
-    --secondary: #c7cfc8;  
-    --accent: #b6a6a1;  
-    --danger: #c97a7a;  
-    --text: #3f4446;  
-    --text-light: #6b7174;  
-}  
-  
-* {  
-    box-sizing: border-box;  
-    -webkit-tap-highlight-color: transparent;  
-}  
-  
-body {  
-    margin: 0;  
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;  
-    background: var(--bg);  
-    min-height: 100vh;  
-    display: flex;  
-    justify-content: center;  
-    align-items: center;  
-}  
-  
-.container {  
-    width: 100%;  
-    max-width: 360px;  
-    background: var(--card);  
-    border-radius: 22px;  
-    padding: 22px 18px 26px;  
-    box-shadow: 0 12px 30px rgba(0,0,0,0.08);  
-}  
-  
-h1 {  
-    margin: 0 0 18px;  
-    text-align: center;  
-    font-size: 18px;  
-    font-weight: 600;  
-    color: var(--text);  
-}  
-  
-.section {  
-    margin-top: 18px;  
-}  
-  
-.grid {  
-    display: grid;  
-    grid-template-columns: 1fr 1fr;  
-    gap: 14px;  
-}  
-  
-.btn {  
-    height: 52px;  
-    border-radius: 16px;  
-    border: none;  
-    font-size: 15px;  
-    font-weight: 500;  
-    background: var(--secondary);  
-    color: var(--text);  
-}  
-  
-.btn:active {  
-    transform: scale(0.97);  
-}  
-  
-.btn.primary {  
-    background: var(--primary);  
-    color: #fff;  
-}  
-  
-.btn.accent {  
-    background: var(--accent);  
-    color: #fff;  
-}  
-  
-.btn.danger {  
-    background: var(--danger);  
-    color: #fff;  
-}  
-  
-.full {  
-    grid-column: span 2;  
-}  
-  
-/* 亮度滑块 */  
-.slider-box {  
-    background: var(--secondary);  
-    border-radius: 16px;  
-    padding: 14px;  
-}  
-  
-.slider-label {  
-    display: flex;  
-    justify-content: space-between;  
-    font-size: 14px;  
-    color: var(--text-light);  
-    margin-bottom: 8px;  
-}  
-  
-input[type="range"] {  
-    width: 100%;  
-}  
-</style>  
-</head>  
-  
-<body>  
-<div class="container">  
-    <h1>KOReader 遥控</h1>  
-  
-    <!-- 翻页 -->  
-    <div class="grid">  
-        <button class="btn primary" onclick="send('/koreader/event/GotoViewRel/-1')">  
-            ⬅ 上一页  
-        </button>  
-        <button class="btn primary" onclick="send('/koreader/event/GotoViewRel/1')">  
-            下一页 ➡  
-        </button>  
-    </div>  
-  
-    <!-- 前光亮度滑块 -->  
-    <div class="section slider-box">  
-        <div class="slider-label">  
-            <span>前光亮度</span>  
-            <span id="flValue">0</span>  
-        </div>  
-        <input type="range" min="0" max="24" step="1" value="0"  
-               oninput="updateFl(this.value)">  
-    </div>  
-  
-    <!-- 导航 -->  
-    <div class="section grid">  
-        <button class="btn accent" onclick="send('/koreader/event/ShowToc')">  
-            📑 目录  
-        </button>  
-        <button class="btn accent" onclick="send('/koreader/event/Home')">  
-            📂 文件浏览器  
-        </button>  
-    </div>  
-  
-    <!-- 退出 -->  
-    <div class="section grid">  
-        <button class="btn danger full" onclick="send('/koreader/event/Exit')">  
-            ⏻ 退出 KOReader  
-        </button>  
-    </div>  
-</div>  
-  
-<script>  
-const KOREADER_BASE = "http://172.20.10.10:8080";  
-  
-/* 发送事件（Image Beacon，手机可用） */  
-function send(path) {  
-    const img = new Image();  
-    img.src = KOREADER_BASE + path + "?t=" + Date.now();  
-}  
-  
-/* 前光亮度控制 */  
-function updateFl(value) {  
-    document.getElementById("flValue").innerText = value;  
-  
-    if (value === "0") {  
-        send("/koreader/event/SetFlIntensity/0");  
-        send("/koreader/event/ToggleFrontlight");  
-    } else {  
-        send("/koreader/event/ToggleFrontlight");  
-        send("/koreader/event/SetFlIntensity/" + value);  
-    }  
-}  
-</script>  
-</body>  
-</html>  
-</html>  
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<title>KOReader 遥控</title>
+
+<style>
+:root {
+    --bg: #f2f3f1;
+    --card: #ffffff;
+    --primary: #8fa3a6;
+    --secondary: #c7cfc8;
+    --accent: #b6a6a1;
+    --danger: #c97a7a;
+    --text: #3f4446;
+}
+
+* {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+    background: var(--bg);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    width: 100%;
+    max-width: 360px;
+    background: var(--card);
+    border-radius: 22px;
+    padding: 22px 18px 26px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+}
+
+h1 {
+    margin: 0 0 18px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: var(--text);
+}
+
+.section {
+    margin-top: 18px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 14px;
+}
+
+.btn {
+    height: 52px;
+    border-radius: 16px;
+    border: none;
+    font-size: 15px;
+    font-weight: 500;
+    background: var(--secondary);
+    color: var(--text);
+}
+
+.btn:active {
+    transform: scale(0.97);
+}
+
+.btn.primary {
+    background: var(--primary);
+    color: #fff;
+}
+
+.btn.accent {
+    background: var(--accent);
+    color: #fff;
+}
+
+.btn.danger {
+    background: var(--danger);
+    color: #fff;
+}
+
+.full {
+    grid-column: span 2;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
+    <h1>KOReader 遥控</h1>
+
+    <!-- 翻页 -->
+    <div class="grid">
+        <button class="btn primary" onclick="send('/koreader/event/GotoViewRel/-1')">
+            ⬅ 上一页
+        </button>
+        <button class="btn primary" onclick="send('/koreader/event/GotoViewRel/1')">
+            下一页 ➡
+        </button>
+    </div>
+
+    <!-- 前光亮度 -->
+    <div class="section grid">
+        <button class="btn" onclick="send('/koreader/event/DecreaseFlIntensity/1')">
+            🔅 亮度 −
+        </button>
+        <button class="btn" onclick="send('/koreader/event/IncreaseFlIntensity/1')">
+            🔆 亮度 +
+        </button>
+    </div>
+
+    <!-- 导航 -->
+    <div class="section grid">
+        <button class="btn accent" onclick="send('/koreader/event/ShowToc')">
+            📑 目录
+        </button>
+        <button class="btn accent" onclick="send('/koreader/event/Home')">
+            📂 文件浏览器
+        </button>
+    </div>
+
+    <!-- 退出 -->
+    <div class="section grid">
+        <button class="btn danger full" onclick="send('/koreader/event/Exit')">
+            ⏻ 退出 KOReader
+        </button>
+    </div>
+</div>
+
+<script>
+const KOREADER_BASE = "http://172.20.10.10:8080";
+
+/* Image Beacon：手机端稳定 */
+function send(path) {
+    const img = new Image();
+    img.src = KOREADER_BASE + path + "?t=" + Date.now();
+}
+</script>
+</body>
+</html>
